<resources>
    <string name="app_name">ICAP</string>
    <string name="msg_subscribed">Subscribed to</string>


    <!--<string name="base_url">http://151.236.33.46:80/kjgri/rest/usersMobile</string>-->
    <!--<string name="base_url">http://151.236.33.46:8080/kjgri/rest/usersMobile</string>-->
    <string name="base_url">http://192.168.60.28:8080/wscm</string>
    --> <!-- localhost -->

    <string name="OK">OK</string>
    <string name="topic">ICAP</string>

    <!-- WELCOME SCREEN -->
    <string name="welcomeText">Intelligent Content and Advertise Provider</string>

    <!-- MESSAGES DISPLAYED TO USER -->
    <string name="credentialsIncorrect">Username or password incorrect!</string>
    <string name="enterAllFields">Please provide username and password</string>
    <string name="generalError">An error occured</string>
    <string name="forbidden">Forbidden access</string>
    <string name="noPermission">You dont have necessary permissions for this app</string>
    <string name="markMessageFailed">Mark message as read failed. Try again later.</string>
    <string name="serverNotAvailable">Server not availabe</string>u
    <string name="errorLogout">An error occured dring logout. Try again later.</string>
    <string name="subscribeError">An error occured during subscribing to service.</string>
    <string name="getUserDataFailed">An error occured while retrieving user\'s data.</string>

    <!-- MAIN ACTIVITY STRINGS-->
    <string name="noMoreMessages">You don\'t have any messages</string>
    <string name="aboutText">Property of Kirey company. Current app version </string>
    <string name="firstName">First Name: </string>
    <string name="lastName">Last Name: </string>
    <string name="userText">Username: </string>
    <string name="emailText">Email: </string>

    <!-- MENU ITEMS -->
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="about">About</string>

    <!-- MENU SETTINGS -->
    <string name="level_red">Accept only red alert notifications</string>
    <string name="level_orange">Accept all alerts higher than yellow level</string>
    <string name="level_yellow">Accept all alerts</string>
    <string name="choose_alert">Choose alert level: </string>
    <string name="messages_storage_size">Set message storage size: </string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_title">Change storage size?</string>
    <string name="dialog_body">Changing storage size to smaller size than previous will erase some messages!</string>

    <!--TEST-->
    <string name="group1">Sports</string>
    <string name="group2">Weather</string>
    <string name="senderId">355779560596</string>
</resources>
