<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="200"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="300"
        android:title="@string/delete"
        android:visible="false"
        android:icon="@drawable/ic_menu_delete_w"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="400"
        android:title="@string/about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="500"
        android:title="@string/logout"
        app:showAsAction="never" />

</menu>